[ms2921/#249] Add statistics page for text
